--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>HEROFLIX - NETFLIX CLONE</title>
+	<title>NETFLIX CLONE</title>
 	<!--fonte bebas neue, própria do netflix-->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
 
 	<div class="container">
 		<span class="hamburguer"><i class="fas fa-bars"></i></span>
-		<h2 class="logo">HEROFLIX</h2>
+		<h2 class="logo">NETFLIX</h2>
 		<nav class="menu-top">
 			<a href="#" class="btnClose"><i class="fas fa-times"></i></a>
 			<a href="#">Minha Lista</a>
